<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerModel"
            type="com.social.socialvideo.fragments.RegistrationFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:hint="@string/userId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userID"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/passwordConfirm"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/register"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirm"
        android:onClick="@{() -> registerModel.registerUser()}"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>