<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="changePasswordModel"
            type="com.social.socialvideo.fragments.ChangePasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/changePasswordTitle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="152dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="68dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordTitle" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/register"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="72dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm"
            android:onClick="@{() -> changePasswordModel.onChangeClicked()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>